# airflow-providers-lokalise

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-app.yml
airflow-provider-lokalise/: __init__.py
connectors/: lokalise.py
hooks/: lokalise.py
lokalise_provider/: __init__.py
lokalise_provider/hooks/: lokalise.py
lokalise_provider/operators/: lokalise.py
provider/connectors/: lokalise.py
tests/hooks/: test_lokalise_hook.py
tests/operators/: test_lokalise_operator.py
